test/functional/failtests/lambdas/tuple.void.txt
TypeError: Inferred type does not expect a return value from lambda function
1 | func main() {
2 |     tuple<func<>>:x = [:(): 123];
  |                         ^ (2:25)
3 | }

